--- a/src/components/Homepage/story.css
+++ b/src/components/Homepage/story.css
@@ -4,3 +4,23 @@
     background-size: contain;
     background-repeat: no-repeat; 
 }
+.hover-zoom:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
+.getbg{
+    background-image: url('./assets/g1.svg');
+    background-position: center;
+    background-size: cover;
+}
+.getbg::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    bottom: 0%;
+    background-color: #007BFF;
+    opacity: 0.4;
+
+}
