--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,5 @@
-.hover:hover{
-    /* background-color: white;
+.hover:hover {
+  /* background-color: white;
     border-radius: 40px; */
-    color: #007BFF;
-    
+  color: #007bff;
 }
