add: authentication token, fix: login page

--- a/src/components/loginpage/login.css
+++ b/src/components/loginpage/login.css
@@ -98,6 +98,12 @@
   }
 }
 
+@media (max-height: 520px) {
+  .plane-icon {
+    display: none; 
+  }
+}
+
 .error-message {
   text-align: left;
   color: red;
