fix: Endpoint changes, Terms&Conditions page, Add Authorization, Min six hours, modify verify OTP.

--- a/src/components/loginpage/login.css
+++ b/src/components/loginpage/login.css
@@ -98,6 +98,18 @@
   }
 }
 
+@media (max-height: 520px) {
+  .plane-icon {
+    display: none;
+  }
+}
+
+@media (max-height: 520px) {
+  .plane-icon {
+    display: none;
+  }
+}
+
 .error-message {
   text-align: left;
   color: red;
